Add new structure in HTML

--- a/index.html
+++ b/index.html
@@ -4,15 +4,45 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
   	</head>
   	<body>
 		<div id="myBooks">
 			<h1 class="title">Poch'Lib</h1>
-			<h2 class="h2">Nouveau Livre</h2>
-			<hr>
+			<h2 class="h2">Nouveau livre</h2>
+				<div class ="flex-container" >
+					<button class="btn1" id="Btn_Add" onclick="">Ajouter un livre</button>
+					<div id="form" hidden>
+						<label for="title">Titre du livre</label><br>
+						<input class="srch" id="title" type="search" required></input><br>
+						<label for="author">Auteur</label><br>
+						<input class="srch" id="author" type="search"  required></input><br>
+						<button class ="btn2" id="Btn_Search" onclick="">Rechercher</button><br>
+						<button class ="btn3" id="Btn_Cancel" onclick="">Annuler</button>
+					</div>
+				</div>
+			<hr align>
 			<div id="content">
-				<h2>Ma poch'liste</h2>
+				<h2 >Ma poch'liste</h2>
 			</div>
+			<div id="results" hidden>
+				<h2 class="h2" >Résultats de recherche</h2>
+				<div class="grid-container">
+					<div id="results1" class="grid-item1"></div>
+					<div id="results2" class="grid-item2">
+						<p class="Titre">Titre:</p>
+						<p class="Id">Id:</p>
+						<p class="Auteur">Auteur:</p>
+						<p class="Description">Description:</p>
+						<p class="Image">Image</p>
+					</div>
+				</div>
+			</div>
+
 		</div>
+		<script src="script.js"></script>
   	</body>
 </html>
