Search fields and

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 						<label for="title">Titre du livre</label><br>
 						<input class="srch" id="title" type="search" required></input><br>
 						<label for="author">Auteur</label><br>
-						<input class="srch" id="author" type="search"  required></input><br>
-						<button class ="btn2" id="Btn_Search" onclick="">Rechercher</button><br>
+						<input class="srch" id="author" type="search" required></input><br>
+						<button class ="btn2" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
 						<button class ="btn3" id="Btn_Cancel" onclick="">Annuler</button>
 					</div>
 				</div>
@@ -31,14 +31,7 @@
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
 				<div class="grid-container">
-					<div id="results1" class="grid-item1"></div>
-					<div id="results2" class="grid-item2">
-						<p class="Titre">Titre:</p>
-						<p class="Id">Id:</p>
-						<p class="Auteur">Auteur:</p>
-						<p class="Description">Description:</p>
-						<p class="Image">Image</p>
-					</div>
+					<div id="results" class="grid-item"></div>
 				</div>
 			</div>
 
