add variable in return

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
 				<div class="grid-container">
-					<div id="results" class="grid-item"></div>
+					<div id="result1" class="results"></div>
+					<div id="result2" class="results"></div>
 				</div>
 			</div>
 
