Add bookmark & trash icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/746dfe7b80.js" crossorigin="anonymous"></script>
   	</head>
   	<body>
 		<div id="myBooks">
@@ -30,10 +31,12 @@
 			</div>
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
-				<div class="grid-container">
-					<div id="result1" class="results"></div>
-					<div id="result2" class="results"></div>
+				<div id="bookmark">
+					<i class="fas fa-bookmark"></i>
+					<i class="fas fa-trash"></i>
+					<div class="grid-container">
 				</div>
+			</div>
 			</div>
 
 		</div>
