Update on returning values

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 			</div>
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
-				<div id="bookmark">
-					<i class="fas fa-bookmark"></i>
-					<i class="fas fa-trash"></i>
-					<div class="grid-container">
-				</div>
-			</div>
-			</div>
+				<div class="row">
+					<div class="column">
+						<div class="card">
+							<i class="fas fa-bookmark"></i>
+								<!-- <i class="fas fa-trash"></i> -->
+							<p class="grid-container"></p>	
+						</div>
+					</div>
+				</div>	
 
 		</div>
 		<script src="script.js"></script>
