--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500;700&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/746dfe7b80.js" crossorigin="anonymous"></script>
   	</head>
   	<body>
@@ -31,17 +31,10 @@
 			</div>
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
-				<div class="row">
-					<div class="column">
-						<div class="card">
-							<i class="fas fa-bookmark"></i>
-								<!-- <i class="fas fa-trash"></i> -->
-							<p class="grid-container"></p>	
-						</div>
-					</div>
-				</div>	
-
-		</div>
+				<div class="flexContainer2">
+					<!-- <i class="fas fa-trash"></i> -->		
+				</div>
+			</div>
 		<script src="script.js"></script>
   	</body>
 </html>
