Add style on "Aucun livre n'a été trouvé"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			<hr align>
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
-				<div class="flexContainer2"></div>
+				<div id="noResult" class="flexContainer2" hidden></div>
+				<div id="resultOk" class="flexContainer3" hidden></div>
 			</div>
 			<div id="content">
 				<h2 >Ma poch'liste</h2>
