Check Key in Session Storage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h2 >Ma poch'liste</h2>
 			</div>
 			<!--TEST SESSION STORAGE-->
-			<div class="show"></div>
+			<div class="myBooks"></div>
 
 		<script src="script.js"></script>
   	</body>
