Display or hide icons after a click

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 			<div id="content">
 				<h2 >Ma poch'liste</h2>
 			</div>
-			<!--TEST SESSION STORAGE-->
-			<div class="myBooks"></div>
+			<!--Add to Poch'liste-->
+			<div >
+
+			</div>
 
 		<script src="script.js"></script>
   	</body>
