--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<h2 >Ma poch'liste</h2>
 			</div>
 			<div >
-				<div id="flexContainer4" class="flexContainer4" ></div>
+				<div id="savedResults" class="flexContainer4" ></div>
 			</div>
 
 		<script src="script.js"></script>
