--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			<h1 class="title">Poch'Lib</h1>
 			<h2 class="h2">Nouveau livre</h2>
 				<div class ="flex-container" >
-					<button class="btn1" id="Btn_Add" onclick="">Ajouter un livre</button>
+					<button class="btn_Add" id="Btn_Add" onclick="">Ajouter un livre</button>
 					<div id="myform" hidden>
 						<label for="title">Titre du livre</label><br>
 						<input class="srch" id="title" type="search" ></input><br>
 						<label for="author">Auteur</label><br>
 						<input class="srch" id="author" type="search" ></input><br>
-						<button class ="btn2" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
-						<button class ="btn3" id="Btn_Cancel" onclick="">Annuler</button>
+						<button class ="btn_Search" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
+						<button class ="btn_Cancel" id="Btn_Cancel" onclick="">Annuler</button>
 					</div>
 				</div>
 			<hr align>
@@ -33,9 +33,7 @@
 			</div>
 			<div id="content">
 				<h2 >Ma poch'liste</h2>
-			</div>
-			<div >
-				<div id="savedResults" class="flexContainer4" ></div>
+				<div id = "flexContainer4" class="flexContainer4" ></div>
 			</div>
 
 		<script src="script.js"></script>
