--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 				<div id = "flexContainer4" class="flexContainer4" ></div>
 			</div>
 
-		<script src="script.js"></script>
+		<script src="js/script.js"></script>
   	</body>
 </html>
