--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 			<h1 class="title">Poch'Lib</h1>
 			<h2 class="h2">Nouveau livre</h2>
 				<div class ="flex-container" >
-					<button class="btn_Add" id="Btn_Add" onclick="">Ajouter un livre</button>
+					<button class="btn btn-centered" id="Btn_Add" onclick="">Ajouter un livre</button>
 					<div id="myform" hidden>
 						<label for="title">Titre du livre</label><br>
-						<input class="srch" id="title" type="search" ></input><br>
+						<input class="form" id="title" type="search" ></input><br>
 						<label for="author">Auteur</label><br>
-						<input class="srch" id="author" type="search" ></input><br>
-						<button class ="btn_Search" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
-						<button class ="btn_Cancel" id="Btn_Cancel" onclick="">Annuler</button>
+						<input class="form" id="author" type="search" ></input><br>
+						<button class ="btn" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
+						<button class ="btn btn-red btn-padding50" id="Btn_Cancel" onclick="">Annuler</button>
 					</div>
 				</div>
 			<hr align>
 			<div id="results" hidden>
 				<h2 class="h2" >Résultats de recherche</h2>
-				<div id="noResult" class="flexContainer2" hidden></div>
-				<div id="resultOk" class="flexContainer3" hidden></div>
+				<div id="noResult" class="noResultFrame" hidden></div>
+				<div id="resultOk" class="frame" hidden></div>
 			</div>
 			<div id="content">
 				<h2 >Ma poch'liste</h2>
-				<div id = "flexContainer4" class="flexContainer4" ></div>
+				<div id = "storedResult" class="frame" ></div>
 			</div>
 
 		<script src="js/script.js"></script>
