--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			<h1 class="title">Poch'Lib</h1>
 			<h2 class="h2">Nouveau livre</h2>
 				<div class ="flex-container" >
-					<button class="btn btn-centered" id="Btn_Add" onclick="">Ajouter un livre</button>
+					<button class="btn btn-centered" id="btn_add" onclick="">Ajouter un livre</button>
 					<div id="myform" hidden>
 						<label for="title">Titre du livre</label><br>
 						<input class="form" id="title" type="search" ></input><br>
 						<label for="author">Auteur</label><br>
 						<input class="form" id="author" type="search" ></input><br>
-						<button class ="btn" id="Btn_Search" type ="submit" onclick="">Rechercher</button><br>
-						<button class ="btn btn-red btn-padding50" id="Btn_Cancel" onclick="">Annuler</button>
+						<button class ="btn" id="btn_search" type ="submit" onclick="">Rechercher</button><br>
+						<button class ="btn btn-red btn-padding50" id="btn_cancel" onclick="">Annuler</button>
 					</div>
 				</div>
 			<hr align>
